--- a/package.json
+++ b/package.json
@@ -8,15 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^35.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "0.59.10",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-reanimated": "~1.2.0",
-    "react-native-screens": "1.0.0-alpha.23",
-    "react-native-unimodules": "~0.5.4",
-    "react-native-web": "^0.11.7"
+    "react": "16.9.0",
+    "react-native": "0.61.2",
+    "expo": "^35.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
